# Cobblestone

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  capture.rdc  compile-shaders.bat  flex-engine.sln  flex-engine.sln.DotSettings  flex-engine.vcxproj  flex-engine.vcxproj.filters  imgui.ini  readme.md  settings.cfg
Shaders/: compile-shaders.bat  compile-shaders.sh
Shaders/Chunk/: Chunk.frag  Chunk.vert
Shaders/Default/: Default.vert
Source/Core/Input/: Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp
Source/Core/Time/: Time.cpp  Time.hpp
Source/Core/World/: World.cpp  World.hpp
Source/Game/: main.cpp
Source/Game/Block/: Block.cpp  Block.hpp
Source/Game/Chunks/: Chunk.cpp  Chunk.hpp
Source/Game/Chunks/Generator/: ChunkGenerator.cpp  ChunkGenerator.hpp
Source/Graphics/Camera/: Camera.cpp  Camera.hpp
Source/Graphics/CommandBufferRecorder/: CommandBufferRecorder.cpp  CommandBufferRecorder.hpp
Source/Graphics/Engine/: Engine.cpp  Engine.hpp
Source/Graphics/Frame/: Frame.cpp  Frame.hpp
Source/Graphics/GPU/: GPU.cpp  GPU.hpp
Source/Graphics/Materials/: BaseMaterial.cpp  BaseMaterial.hpp
Source/Graphics/Materials/ChunkMaterial/: ChunkMaterial.cpp  ChunkMaterial.hpp
Source/Graphics/Memory/Buffer/: Buffer.hpp
Source/Graphics/Memory/Image/: Image.cpp  Image.hpp
Source/Graphics/Memory/MemoryManager/: MemoryManager.cpp  MemoryManager.hpp
Source/Graphics/Memory/Texture/: Texture.hpp
Source/Graphics/Mesh/: Mesh.cpp  Mesh.hpp
Source/Graphics/Render/Engine/: RendererEngine.cpp  RendererEngine.hpp
Source/Graphics/Render/Window/: RenderWindow.cpp  RenderWindow.hpp
Source/Graphics/Shaders/: BaseShader.cpp  BaseShader.hpp
Source/Graphics/Swapchain/: Swapchain.cpp  Swapchain.hpp
Source/Graphics/Utils/: VulkanHelpers.cpp  VulkanHelpers.hpp
Source/Graphics/Vertex/: Vertex.cpp  Vertex.hpp
Source/Graphics/Window/: Window.cpp  Window.hpp
examples/: CMakeLists.txt  compile-shaders.bat  compile-shaders.sh  example1.cpp  example1.vcxproj  example1.vcxproj.filters  examples.vcxproj  examples.vcxproj.filters
examples/example1/: CMakeLists.txt  example1.cpp
examples/example1/shaders/: BlockShaderInfo.cpp  BlockShaderInfo.hpp  block.vert  compile-shaders.bat  compile-shaders.sh
examples/example2/: CMakeLists.txt  example2.cpp
include/: FlexEngine.hpp  flexEngine.hpp
include/core/: InputHandler.hpp  Main.hpp  Scene.hpp  Time.hpp  Vector2.hpp  eventHandler.hpp  inputHandler.hpp  main.hpp
include/graphics/: Buffer.hpp  Camera.hpp  CommandBufferRecorder.hpp  Frame.hpp  GPU.hpp  Image.hpp  Material.hpp  MemoryManager.hpp  Mesh.hpp  QueueFamiliIndices.hpp  QueueFamilyIndices.hpp  RenderAPI.hpp  RenderWindow.hpp  RendererEngine.hpp  Shader.hpp  ShaderInformation.hpp  Swapchain.hpp  SwapchainSupportDetails.hpp  Texture.hpp  Vertex.hpp  VulkanHelpers.hpp  renderAPI.hpp  vulkanRenderer.hpp  window.hpp
include/graphics/openGL/: OpenGLRenderer.hpp
include/graphics/vulkan/: Pipeline.hpp  QueueFamily.hpp  QueueFamilyIndices.hpp  SwapChain.hpp  SwapChainSupportDetails.hpp  VulkanBuffer.hpp  VulkanCommandBufferRecorder.hpp  VulkanFrame.hpp  VulkanGPU.hpp  VulkanHelpers.hpp  VulkanImage.hpp  VulkanMemoryManager.hpp  VulkanPipeline.hpp  VulkanQueueFamily.hpp  VulkanQueueFamilyIndices.hpp  VulkanQueues.hpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanShaderInformation.hpp  VulkanSwapchain.hpp  VulkanSwapchainSupportDetails.hpp  vk_mem_alloc.h  vulkanDeviceQueueFamilyIndices.hpp  vulkanRenderer.hpp  vulkanSwapchain.hpp
include/utils/: Configuration.hpp  configuration.hpp
shaders/: shader.vert
src/: CMakeLists.txt  main.cpp
src/core/: InputHandler.cpp  Scene.cpp  Time.cpp  Vector2.cpp  eventHandler.cpp  inputHandler.cpp
src/graphics/: Buffer.cpp  Camera.cpp  CommandBufferRecorder.cpp  Frame.cpp  GPU.cpp  Image.cpp  Material.cpp  MemoryManager.cpp  Mesh.cpp  QueueFamiliIndices.cpp  QueueFamilyIndices.cpp  RenderWindow.cpp  RendererEngine.cpp  Shader.cpp  ShaderInformation.cpp  Swapchain.cpp  SwapchainSupportDetails.cpp  Texture.cpp  Vertex.cpp  VulkanHelpers.cpp  vk_mem_alloc.cpp  vulkanRenderer.cpp  window.cpp
src/graphics/openGL/: OpenGLRenderer.cpp
src/graphics/vulkan/: Pipeline.cpp  QueueFamilyIndices.cpp  SwapChain.cpp  SwapChainSupportDetails.cpp  VulkanBuffer.cpp  VulkanCommandBufferRecorder.cpp  VulkanFrame.cpp  VulkanGPU.cpp  VulkanHelpers.cpp  VulkanImage.cpp  VulkanMemoryManager.cpp  VulkanPipeline.cpp  VulkanQueueFamilyIndices.cpp  VulkanQueues.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanShaderInformation.cpp  VulkanSwapchain.cpp  VulkanSwapchainSupportDetails.cpp  vk_mem_alloc.cpp  vulkanDeviceQueueFamilyIndices.cpp  vulkanRenderer.cpp  vulkanSwapchain.cpp
src/utils/: Configuration.cpp  configuration.cpp  configuration.hpp
(+6 files in other folders)
